objects/INF_Contracts_Req__c.object
<CustomObject>
    <description>Informatics contract request</description>
    <label>Contract Request</label>
    <nameField>
        <label>Old Contracts Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contracts Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Stage__c</fullName>
        <formula>TEXT( Opportunity_Name_INF__r.StageName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MSA_INF__c</fullName>
        <label>MSA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NDAOnly__c</fullName>
        <inlineHelpText>NDA only: General Nature of discussion</inlineHelpText>
        <label>NDAOnly</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Demo/Sales Presentation</fullName>
                </value>
                <value>
                    <fullName>Product Development/Consulting</fullName>
                </value>
                <value>
                    <fullName>Human Resources</fullName>
                </value>
                <value>
                    <fullName>Corporate</fullName>
                </value>
                <value>
                    <fullName>RFP/RFQ</fullName>
                </value>
                <value>
                    <fullName>Finance Customer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Purpose__c</fullName>
        <inlineHelpText>Purpose: (New licenses; Renewal; NDA; Prof. Services etc.) *IF NDA SKIP TO # 7 BELOW and complete #7-16*</inlineHelpText>
        <label>Purpose</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New licenses</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
                <value>
                    <fullName>NDA</fullName>
                </value>
                <value>
                    <fullName>Prof. Services</fullName>
                </value>
                <value>
                    <fullName>RFI</fullName>
                </value>
                <value>
                    <fullName>RFP</fullName>
                </value>
                <value>
                    <fullName>RFQ</fullName>
                </value>
                <value>
                    <fullName>Vendor Form</fullName>
                </value>
                <value>
                    <fullName>Tax certificate</fullName>
                </value>
                <value>
                    <fullName>Cert. Ltr.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NDA_only__c</fullName>
        <inlineHelpText>NDA only: Other Party’s role</inlineHelpText>
        <label>NDA only</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Prospective Customer/Client</fullName>
                </value>
                <value>
                    <fullName>Consultant    Vendor/Contractor</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Spotfire__c</fullName>
        <inlineHelpText>Spotfire: Has this been approved by Exceptions Approval
(Attach approval email to your request)</inlineHelpText>
        <label>Spotfire</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Countries__c</fullName>
        <inlineHelpText>Countries where software will be used and professional services rendered:</inlineHelpText>
        <label>Countries</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status_INF__c</fullName>
        <label>Status (Contract Team use only)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Initial Request</fullName>
                    <default>true</default>
                    <label>Initial Request</label>
                </value>
                <value>
                    <fullName>Request Acknowledged</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Internal Review</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Request Cancelled</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Sent to Sales</fullName>
                </value>
                <value>
                    <fullName>Sent to Customer</fullName>
                </value>
                <value>
                    <fullName>Sent to Services</fullName>
                </value>
                <value>
                    <fullName>In signature PKI</fullName>
                </value>
                <value>
                    <fullName>In signature Customer</fullName>
                </value>
                <value>
                    <fullName>Sent to Contracts</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <label>Assigned To (Contract Team use only)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ray Lowe</fullName>
                </value>
                <value>
                    <fullName>Darlene Willard</fullName>
                </value>
                <value>
                    <fullName>Brendan Melvin</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comment_INF__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Order_Value__c</fullName>
        <formula>Opportunity_Name_INF__r.Amount</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <formula>Opportunity_Name_INF__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expected_Date__c</fullName>
        <formula>Opportunity_Name_INF__r.CloseDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expected Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contracts_Name__c</fullName>
        <label>Contracts Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>MSA/PSA</fullName>
                </value>
                <value>
                    <fullName>License Agreement</fullName>
                </value>
                <value>
                    <fullName>NDA</fullName>
                </value>
                <value>
                    <fullName>Quote</fullName>
                </value>
                <value>
                    <fullName>W-9</fullName>
                </value>
                <value>
                    <fullName>Audit form</fullName>
                </value>
                <value>
                    <fullName>Cert. Ltr.</fullName>
                </value>
                <value>
                    <fullName>PO</fullName>
                </value>
                <value>
                    <fullName>Amendment</fullName>
                </value>
                <value>
                    <fullName>Sole Source</fullName>
                </value>
                <value>
                    <fullName>Cert. of Ins.</fullName>
                </value>
                <value>
                    <fullName>RFI</fullName>
                </value>
                <value>
                    <fullName>RFP</fullName>
                </value>
                <value>
                    <fullName>RFQ</fullName>
                </value>
                <value>
                    <fullName>Vendor Form</fullName>
                </value>
                <value>
                    <fullName>Tax Cert.</fullName>
                </value>
                <value>
                    <fullName>SOW</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Distributor Agreement</fullName>
                </value>
                <value>
                    <fullName>Review for Team</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Company_Details__c</fullName>
        <inlineHelpText>Address required</inlineHelpText>
        <label>Customer Address (full address required)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Details__c</fullName>
        <label>Contact Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Order_Background__c</fullName>
        <inlineHelpText>Order Background (provide any pertinent information contracts should be aware of)</inlineHelpText>
        <label>Order Background</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Request_Date_INF__c</fullName>
        <label>Request Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Contract_Document__c</fullName>
        <inlineHelpText>If Customer requires their contract document: Have you already requested the customer to use our document?</inlineHelpText>
        <label>Contract Document:</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_Party_s_Role__c</fullName>
        <label>Other Party’s Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Prospective Customer</fullName>
                </value>
                <value>
                    <fullName>Consultant</fullName>
                </value>
                <value>
                    <fullName>Vendor</fullName>
                </value>
                <value>
                    <fullName>Contractor</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_or_services__c</fullName>
        <inlineHelpText>Product(s) to be licensed or services to be provided.</inlineHelpText>
        <label>Product or services</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Application__c</fullName>
        <inlineHelpText>Customer Application: (How will customer utilize the software?  If Spotfire: is use only for customer internal use or will external users have access to Spotfire or Webplayer?)</inlineHelpText>
        <label>Customer Application</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name_INF__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity Name</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Contracts Requests</relationshipLabel>
        <relationshipName>Contracts_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_Request_Email__c</fullName>
        <defaultValue>&quot;Informatics.ContractsRequest@PERKINELMER.COM&quot;</defaultValue>
        <label>Contract Request Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Internal_Sales_Contact__c</fullName>
        <formula>Opportunity_Name_INF__r.Owner.FirstName + &quot; &quot; + Opportunity_Name_INF__r.Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Internal Sales Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NDA_only_General_nature__c</fullName>
        <inlineHelpText>NDA only: General nature/description of confidential information that other Party may disclose to you if any:</inlineHelpText>
        <label>NDA only General nature</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Demo</fullName>
                </value>
                <value>
                    <fullName>Sales presentation</fullName>
                </value>
                <value>
                    <fullName>Product Development</fullName>
                </value>
                <value>
                    <fullName>Consulting</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Human Resources</fullName>
                </value>
                <value>
                    <fullName>Corporate</fullName>
                </value>
                <value>
                    <fullName>RFP</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Customer Audit</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NDA_Only_General_Discription__c</fullName>
        <inlineHelpText>NDA only: General nature/description of confidential information that you may disclose to the other Party, if any (please include products you may discuss during your meetings):</inlineHelpText>
        <label>NDA Only General Discription</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NDA_only_Over_how_long_a_period__c</fullName>
        <inlineHelpText>NDA only: Over how long a period (# of months/years) do you believe confidential information will be exchanged with the other party?</inlineHelpText>
        <label>NDA only Over how long a period</label>
        <type>TextArea</type>
    </fields>
</CustomObject>